--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,7 @@ input {
   font-size: 0.8em;
   padding: 5px 10px;
   width: 25px;
+  text-align: center;
 }
 input:focus {
   border: solid 1px #9d856c;
