--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,25 @@ nav {
 .title{
   margin-top: 0;
 }
+.desc{
+  width: 300px;
+}
+.big {
+  font-size: 1.3em;
+}
+.fullWidth {
+  width: 100%;
+  min-height: 50px;
+}
+.cartIcon {
+  width: 60px;
+  height: 60px;
+}
+th {
+  font-size: 0.7em;
+  color: #c0ab98;
+  text-align: left;
+}
 .search {
   position: relative;
   left: 95px;
@@ -86,7 +105,7 @@ main {
 button {
   font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
   font-size: 0.7em;
-  padding: 5px 10px;
+  padding: 5px 11px;
   background: rgba(0, 0, 0, 0.1);
   border: solid 2px #9d856c;
   color: #3d2117;
@@ -118,7 +137,6 @@ input::placeholder {
 }
 table {
   font-size: 1.3em;
-  margin: 0 auto;
 }
 .title {
   margin: 0 auto;
@@ -144,11 +162,16 @@ table {
 small {
   font-weight: normal;
 }
-
+.center {
+  margin: 0 auto;
+}
 .float {
   float: left;
   padding-right: 5px;
 }
 .form {
   padding-left: 10px;
+}
+.round {
+  border-radius: 50%;
 }
