feat (Order): inputs

--- a/src/App.css
+++ b/src/App.css
@@ -126,9 +126,7 @@ input {
   width: 25px;
   text-align: center;
 }
-input:focus {
-  border: solid 1px #9d856c;
-}
+
 input::placeholder {
   color: #ccc;
 }
@@ -178,6 +176,12 @@ small {
 .cart-page {
   max-width: 800px;
   margin: 0 auto;
+}
+.block-order {
+    padding: 20px 0 20px 10px;
+    background: rgba(255, 238, 227, 0.5);
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 10%);
+    font-size: 1.2em;
 }
 
 @media (max-width: 800px) {
