--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ nav {
 }
 .fullWidth {
   width: 100%;
-  min-height: 50px;
 }
 .cartIcon {
   width: 60px;
@@ -99,7 +98,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
 }
-button {
+button, .button {
   font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
   font-size: 0.7em;
   padding: 5px 11px;
@@ -107,8 +106,9 @@ button {
   border: solid 2px #9d856c;
   color: #3d2117;
   cursor: pointer;
+  text-decoration: none;
 }
-button:hover {
+button:hover, .button:hover {
   background: rgba(0, 0, 0, 0.2);
 }
 h2 {
@@ -144,7 +144,7 @@ table {
 }
 .block {
   text-align: center;
-  padding: 20px 0 20px 10px;
+  padding: 20px 10px 20px 10px;
   background: rgba(255, 245, 227, 0.5);
   color: #9d856c;
   font-weight: bold;
@@ -185,11 +185,19 @@ small {
 .total {
   text-align: left;
   font-size: 1.2em;
-  padding-left: 20px;
+  padding: 10px 0 10px 20px;
 }
 
 .w220 {
   width: 150px;
+}
+
+.error {
+  border: 2px solid red;
+}
+
+.big {
+  font-size: 1.2em;
 }
 
 @media (max-width: 800px) {
