--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ th {
 /* Header panel */
 
 header {
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   height: 75px;
   background: url(assets/background.jpg) #fcedd4;
