--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ th {
 }
 .menu {
   float: right;
-  opacity: 0.3;
+  opacity: 0.5;
   margin: 12px;
 }
 .menu:hover {
@@ -83,6 +83,11 @@ footer {
   padding: 40px 20px 40px;
   text-align: center;
   margin-top: -30px;
+}
+.lang_selector {
+  background: #efd8b4;
+  padding: 10px;
+  font-size: 0.8em;
 }
 
 /* Header panel */
@@ -159,7 +164,7 @@ button:hover, .button:hover {
 h2 {
   margin-top: 0;
   letter-spacing: 0.05em;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 strong {
   color: #3d2117;
