--- a/src/App.css
+++ b/src/App.css
@@ -239,9 +239,9 @@ small {
   font-size: 1.2em;
 }
 .total {
-  text-align: left;
   font-size: 1.2em;
-  padding: 10px 0 10px 20px;
+  padding: 10px 20px 10px 0;
+  text-align: right;
 }
 .w220 {
   width: 150px;
