--- a/src/routes/HomePage/style.module.css
+++ b/src/routes/HomePage/style.module.css
@@ -103,6 +103,7 @@
   font-size: 1.2em;
   padding: 0.7em 1.2em;
   margin: 5px;
+  display: inline-block;
 }
 .big_button:hover {
   color: #fff;
@@ -153,18 +154,18 @@ body {
   align-items: center;
 }
 .banner:nth-of-type(1) {
-  --img: url(http://oliya.com.ua/img/landing/utp.jpg);
+  --img: url(https://oliya.com.ua/img/landing/utp.jpg);
 }
 .banner:nth-of-type(2) {
 }
 .banner:nth-of-type(3) {
-  --img: url(http://oliya.com.ua/img/landing/maslozavod.jpg);
+  --img: url(https://oliya.com.ua/img/landing/maslozavod.jpg);
   height: 150vh;
 }
 .banner:nth-of-type(4) {
 }
 .banner:nth-of-type(5) {
-  --img: url(http://oliya.com.ua/img/landing/smak.jpg);
+  --img: url(https://oliya.com.ua/img/landing/smak.jpg);
 }
 
 /* Media */
@@ -211,5 +212,12 @@ body {
   }
   .placeholder {
     display: none;
+  }
+
+  .home h1 {
+    font-size: 2em;
+  }
+  .subtitle {
+    font-size: 1em;
   }
 }
