--- a/src/App.css
+++ b/src/App.css
@@ -78,11 +78,10 @@ menu a:hover {
   background: rgba(86, 58, 44, 0.6);
 }
 footer {
-  background: #efd8b4;
+  background: rgba(107, 69, 58, 0.2);
   font-size: 1.5em;
   padding: 40px 20px 40px;
   text-align: center;
-  margin-top: -30px;
 }
 .lang_selector {
   background: #efd8b4;
@@ -99,14 +98,15 @@ footer {
 /* Header panel */
 
 header {
-  /* position: sticky; */
   top: 0;
   height: 75px;
-  background: url(assets/background.jpg) #fcedd4;
-  box-shadow: 0 0 0 100px rgba(107, 69, 58, 0.2) inset;
+  background: rgba(157, 128, 100, 0.9);
   font-size: 1.5em;
-  color: #3d2117;
+  color: #fae9ce;
   padding: 10px 20px 10px;
+}
+.sticky {
+  position: sticky;
 }
 header strong {
   color: #fff;
@@ -167,6 +167,13 @@ button, .button {
 }
 button:hover, .button:hover {
   background: rgba(0, 0, 0, 0.2);
+}
+.cart .button {
+  background: rgba(0, 0, 0, 0.2);
+  border: solid 2px #fff;
+}
+.cart .button:hover {
+  background: rgba(0, 0, 0, 0.4);
 }
 h2 {
   margin-top: 0;
