--- a/src/routes/HomePage/style.module.css
+++ b/src/routes/HomePage/style.module.css
@@ -44,6 +44,10 @@
 .bar_desc {
   padding: 20px 20px 40px;
 }
+.bar span {
+  color: #9d856c;
+}
+
 .bar_desc p {
   font-size: 1.2em;
 }
@@ -142,7 +146,7 @@ body {
 
 .banner {
   margin-left: calc(50% - 50vw);
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   width: 100vw;
   height: 37.5vh;
   min-height: 35em;
@@ -229,6 +233,6 @@ body {
     width: auto;
   }
   .long {
-    height: 800vh!important;
+    height: 600vh!important;
   }
 }
