--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ menu a:active {
   background: rgba(86, 58, 44, 0.4);
 }
 menu a:hover {
-  background: rgba(86, 58, 44, 0.6);
+  background: rgba(157, 128, 100, 0.95);
 }
 footer {
   background: rgba(107, 69, 58, 0.2);
@@ -158,7 +158,8 @@ header strong {
   font-size: 2em;
   margin-left: calc(50% - 50vw);
   width: 100vw;
-  padding: 50px;
+  display: block;
+  padding: 50px 0;
   color: #fff;
   background: #846f5b
 }
@@ -341,11 +342,12 @@ small {
     position: absolute;
     top: 95px;
     right: 0;
+    left: 0;
+    z-index: 1;
   }
   menu a {
-    background: rgba(86, 58, 44, 0.5);
+    background: rgba(86, 58, 44, 0.95);
     padding: 20px 50px;
-    width: 150px;
     float: none;
   }
   .mobile_menu {
@@ -358,6 +360,18 @@ small {
 
   .floatResponsive {
     float: none;
+  }
+  .about h1 {
+    font-size: 3em;
+  }
+  .about h2 {
+    font-size: 1.5em;
+  }
+  .h2subtitle {
+    font-size: 1em;
+  }
+  .subtitle {
+    font-size: 1em;
   }
 
 }
