feat: comparison images and description

--- a/src/routes/HomePage/style.module.css
+++ b/src/routes/HomePage/style.module.css
@@ -188,7 +188,7 @@ body {
   color: black;
 }
 .bgGray {
-  background: #eee;
+  background: #e2e2e2;
 }
 .uppercase {
   text-transform: uppercase;
