--- a/src/routes/ProducePage/style.module.css
+++ b/src/routes/ProducePage/style.module.css
@@ -162,10 +162,18 @@ body {
   justify-content: center;
   align-items: center;
 }
-.banner1 {
+.banner:nth-of-type(1) {
   --img: url(https://oliya.com.ua/img/landing/utp.jpg);
 }
-.banner2  {
+.banner:nth-of-type(2) {
+}
+.banner:nth-of-type(3) {
+  --img: url(https://oliya.com.ua/img/landing/maslozavod.jpg);
+  height: 150vh;
+}
+.banner:nth-of-type(4) {
+}
+.banner:nth-of-type(5) {
   --img: url(https://oliya.com.ua/img/landing/smak.jpg);
 }
 
@@ -385,7 +393,7 @@ body {
     grid-column-start: auto;
     grid-column-end: auto;
     order: 102;
-    margin-top: 100px;
+    margin-top: 20px;
   }
   .bar3 {
     order: 3;
