prepare store for a new owner

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
+  font-family: 'Comic Sans MS', Verdana, sans-serif;
   background: url(assets/background.jpg) #fcedd4;
 }
 blockquote {
@@ -99,10 +99,9 @@ footer {
 
 .message_error {
   color: white;
-  background: orange;
+  background: brown;
   font-size: 1.5em;
-  padding: 20px;
-  text-align: center;
+  padding: 0 20px;
 }
 
 /* Header panel */
@@ -151,7 +150,7 @@ header strong {
 .about {
   margin: 0 auto;
   font-size: 1.3em;
-  font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
+  font-family: 'Comic Sans MS', Verdana, sans-serif;
   text-align: center;
 }
 .about h1 {
@@ -221,7 +220,7 @@ blockquote {
   margin: 0 auto;
 }
 button, .button {
-  font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
+  font-family: 'Comic Sans MS', Verdana, sans-serif;
   font-size: 0.7em;
   padding: 5px 11px;
   background: rgba(0, 0, 0, 0.1);
@@ -249,7 +248,7 @@ strong {
   color: #3d2117;
 }
 input {
-  font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
+  font-family: 'Comic Sans MS', Verdana, sans-serif;
   font-size: 0.8em;
   padding: 5px;
   text-align: center;
