--- a/src/routes/HomePage/style.module.css
+++ b/src/routes/HomePage/style.module.css
@@ -133,7 +133,7 @@ body {
   margin: 0 auto;
   background: rgba(255, 238, 227, 0.5);
   font-size: 1.3em;
-  font-family: 'Comic Sans MS', Cursive, Verdana, sans-serif;
+  font-family: 'Comic Sans MS', Verdana, sans-serif;
   text-align: center;
 }
 .home h1 {
